# termkit

./: .flake8  LICENSE  README.md  pyproject.toml  tox.ini
termkit/: __init__.py  arguments.py  core.py  formatters.py  groups.py  input.py  parser.py  prompt.py  tests.py  utils.py
tests/: test_core.py  test_parser.py
