# Copyright 2023, Thomas Mahé <contact@tmahe.dev>
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "termkit"
version = "0.2.11"
description = "Python command line application framework"
authors = ["Thomas Mahé <contact@tmahe.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.devel.dependencies]
mkdocs-material = "^9.4.4"

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
